--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "private": true,
   "dependencies": {
     "egg": "^2.2.1",
-    "egg-scripts": "^2.5.0"
+    "egg-scripts": "^2.5.0",
+    "koa-is-json": "^1.0.0",
+    "npm": "^6.4.1",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
     "autod": "^3.0.1",
