--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "egg": "^2.2.1",
+    "egg-development-proxyagent": "^1.0.0",
     "egg-mysql": "^3.0.0",
     "egg-scripts": "^2.5.0",
     "koa-is-json": "^1.0.0",
