--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "private": true,
   "dependencies": {
     "egg": "^2.2.1",
+    "egg-cors": "^2.1.1",
     "egg-development-proxyagent": "^1.0.0",
     "egg-mysql": "^3.0.0",
     "egg-scripts": "^2.5.0",
     "egg-static": "^2.1.1",
-    "koa-is-json": "^1.0.0",
-    "npm": "^6.4.1",
-    "zlib": "^1.0.5"
+    "koa-is-json": "^1.0.0"
   },
   "devDependencies": {
     "autod": "^3.0.1",
