--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "egg-mysql": "^3.0.0",
     "egg-scripts": "^2.5.0",
     "egg-static": "^2.1.1",
-    "koa-is-json": "^1.0.0"
+    "koa-is-json": "^1.0.0",
+    "xml2js": "^0.4.19"
   },
   "devDependencies": {
     "autod": "^3.0.1",
