--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "egg-scripts": "^2.5.0",
     "egg-static": "^2.1.1",
     "koa-is-json": "^1.0.0",
+    "nodemailer": "^4.7.0",
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
